# rust-management-user001

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  compose.yml  request.http
migrations/: 20260112163639_add_user_table.up.sql
src/: main.rs
src/modules/users/: mod.rs
src/modules/users/applications/dtos/: create_user_payload.rs  mod.rs  update_user_payload.rs  user_response.rs
src/modules/users/domain/entities/: user.rs
